# deepagents

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: research-evals.yml
docs/: evaluation_plan.md  how to run this.md  phoenix_dashboards.md
examples/research/: dump_run.py  eval_run.py  research_agent.py
outputs/: 20250814_205252__events.jsonl  20250814_205923__events.jsonl  20250814_210759__events.jsonl  20250814_210759__final_report.md  20250814_213331__events.jsonl  20250814_214021__events.jsonl  20250814_214021__final_report.md  20250814_214021__question.txt  20250814_222256__events.jsonl  20250814_222256__final_report.md  20250814_222256__question.txt  compiled_runs.csv  run_state_20250814_210759.json  run_state_20250814_210759.txt  run_state_20250814_214021.json  run_state_20250814_214021.txt  run_state_20250814_222256.json  run_state_20250814_222256.txt
pydanticaideepagents/: EVALUATION_REPORT.md  README.md  debug_simple_test.py  debug_test.py  dump_agent_state.py  pyproject.toml  run.py  run.sh  run_ukraine_research.py  simulate_research_state.py  simulated_agent_state.json  test_basic.py  test_create_agent.py  test_env.py  test_run_agent.py
pydanticaideepagents/examples/research/: research_agent.py  simple_test.py
pydanticaideepagents/src/pydanticaideepagents/: __init__.py  deep_agent.py  dependencies.py  mock_filesystem.py  todo_manager.py  tools.py
src/Project Documentation/: Cascadeworkvsclaudecode.md  Phoenix_Dashboards_and_CI_Evals.md  Phoenix_Tracing_Implementation_Guide.md  PydanticAI_Migration_Analysis.md  deepagentevaluation.md  how to run this.md  research_flow.md
src/deepagents/: cli.py  graph.py  sub_agent.py  tracing.py
